added onClick method

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
   font-family: sans-serif;
 }
 
-.guess-card {
+.guess-section {
   position: relative;
   background-color: #394264;
   width: 380px;
