--- a/src/index.css
+++ b/src/index.css
@@ -5,20 +5,16 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  text-align: center;
 }
 
-.guess-section {
-  position: relative;
-  background-color: #394264;
-  width: 380px;
-  height: 380px;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-  margin: 0 auto;
+html {
+  width: 100%;
+  height: 100%;
+  font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+  background-color: rgb(19,24,98);
+  color: white;
 }
-
 
 ul {
   list-style-type: none;
@@ -35,7 +31,10 @@ a {
 
 a:hover {
   text-decoration: underline;
-  text-decoration-skip: ink;
+}
+
+a:visited {
+  color: white;
 }
 
 
