--- a/src/components/guess-form.css
+++ b/src/components/guess-form.css
@@ -1,11 +1,14 @@
 .guess-form button {
     display: block;
     margin: auto;
-    margin-top: 10px;
+    margin-top: 25px;
     width: 200px;
-    padding: 5px;
-    font-size: 20px;
+    padding: 7px;
+    font-size: 25px;
     border-radius: 5px; 
+    background-color: rgb(19,24,98);
+    color: gray;
+    border-style: none;
 }
 
 .guess-form input {
