--- a/src/components/guess-history.css
+++ b/src/components/guess-history.css
@@ -1,11 +1,17 @@
 .guess-history {
     background-color: rgb(135,136,156);
     display: block;
+    height: 60px;
+    padding: 8px;
+    overflow: auto;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
 }
 
 .guess-history li {
     background-color: rgb(238,232,107);
     color: black;
-    margin: 2px;
+    margin: 3px;
     border-radius: 3px;
+    padding: 3px;
 }
