--- a/src/components/guess-section.css
+++ b/src/components/guess-section.css
@@ -13,4 +13,6 @@
   .guess-section h2 {
     background: rgb(190,169,222);
     padding: 35px;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
   }
